updated for submission

--- a/PA1_template.html
+++ b/PA1_template.html
@@ -504,7 +504,7 @@ MaxIntervalSteps</code></pre>
 <pre><code>## [1] 2304</code></pre>
 <pre class="r"><code>(sum(is.na(sd$steps)) / (sum(is.na(sd$steps)) + sum(!is.na(sd$steps)))) * 100</code></pre>
 <pre><code>## [1] 13.11475</code></pre>
-<p>The total number of missing data is <strong>2304</strong> rows and the percentage of missing value is <strong>13.11%</strong></p>
+<p>The total number of missing data is <strong>2304</strong> and the percentage of missing value is <strong>13.11%</strong></p>
 <ul>
 <li>step 2: use mean to impute the missing values and create imputed data</li>
 </ul>
